--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ numpy = "^1.26.1"
 scikit-learn = "^1.3.2"
 notebook = "^7.0.6"
 matplotlib = "^3.8.1"
+joblib = "^1.3.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.4.3"
