--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ scikit-learn = "^1.3.2"
 notebook = "^7.0.6"
 matplotlib = "^3.8.1"
 joblib = "^1.3.2"
+more-itertools = "^10.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.4.3"
