--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,7 @@ packages = [
 
 [tool.poetry.scripts]
 gen-ckpt = "tidalsim.scripts.gen_ckpt:main"
-gen-ckpts = "tidalsim.scripts.gen_ckpts:main"
-run-embench-tests = "tidalsim.scripts.run_embench_tests:main"
+tidalsim = "tidalsim.scripts.tidalsim:main"
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.13"
