--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,10 +24,14 @@ matplotlib = "^3.8.1"
 joblib = "^1.3.2"
 more-itertools = "^10.1.0"
 pandas = "^2.1.3"
+pandera = {version="^0.17.2", extras=["mypy"]}
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.4.3"
 mypy = "^1.6.1"
+
+[tool.mypy]
+plugins = "pandera.mypy"
 
 [build-system]
 requires = ["poetry-core"]
