add dummy readmemb tag array generator

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [
 
 [tool.poetry.scripts]
 gen-ckpt = "tidalsim.scripts.gen_ckpt:main"
+gen-cache-state = "tidalsim.scripts.gen_cache_state:main"
 tidalsim = "tidalsim.scripts.tidalsim:main"
 analyze = "tidalsim.scripts.analyze:main"
 
