--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,13 +22,15 @@ scikit-learn = "^1.3.2"
 notebook = "^7.0.6"
 matplotlib = "^3.8.1"
 joblib = "^1.3.2"
-more-itertools = "^10.1.0"
-pandas = "^2.1.3"
-pandera = {version="^0.17.2", extras=["mypy"]}
+more-itertools = "^10.2.0"
+pandas = "^2.2.0"
+pandera = {version="^0.18.0", extras=["mypy"]}
+pyarrow = "^15.0.0"
 
 [tool.poetry.dev-dependencies]
-pytest = "^7.4.3"
-mypy = "^1.6.1"
+pytest = "^8.0.0"
+mypy = "^1.8.0"
+setuptools = "^69.1.0"
 
 [tool.mypy]
 plugins = "pandera.mypy"
