--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,17 +24,20 @@ matplotlib = "^3.8.1"
 joblib = "^1.3.2"
 more-itertools = "^10.2.0"
 pandas = "^2.2.0"
-pandera = {version="^0.18.0", extras=["mypy"]}
+pandera = {version="^0.18.0"}
 pyarrow = "^15.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^8.0.0"
-mypy = "^1.8.0"
+pyright = "^1.1.350"
 setuptools = "^69.1.0"
-
-[tool.mypy]
-plugins = "pandera.mypy"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pyright]
+exclude = ["tidalsim/archive/**"]
+include = ["tidalsim", "tests"]
+reportMissingImports = true
+typeCheckingMode = "standard"
